manifests/auth-provider/overlays/integration/patches/backend-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-redis-service
spec:
  loadBalancerIP: 10.15.100.236
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-redis-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-redis
          resources:
            limits:
              cpu: "200m"
              memory: "300Mi"
