manifests/auth-provider/overlays/integration/patches/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  loadBalancerIP: 10.15.100.234
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  template:
    spec:
      containers:
        - name: backend
          command:
            [
              "./bin/rails",
              "server",
              "-b",
              "0.0.0.0",
              "-p",
              "3000",
              "-e",
              "integration",
            ]
          resources:
            limits:
              cpu: "300m"
