manifests/auth-provider/overlays/integration/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - integration.auth-provider.kuroweb.net
        - www.integration.auth-provider.kuroweb.net
      secretName: ingress-cert
  rules:
    - host: integration.auth-provider.kuroweb.net
